backend/lab-service/docker-res/kubernetes/service-admin.yaml
# ------------------- Dashboard Deployment ------------------- #

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: <SERVICE_NAMESPACE>-service-admin
  name: <SERVICE_NAMESPACE>-service-admin
  namespace: <SERVICE_NAMESPACE>
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: <SERVICE_NAMESPACE>-service-admin
  template:
    metadata:
      labels:
        app: <SERVICE_NAMESPACE>-service-admin
        role: kubernetes-dashboard
    spec:
      containers:
      - name: kubernetes-dashboard
        image: kubernetesui/dashboard:v2.0.0-rc2
        ports:
        - containerPort: 8443
          protocol: TCP
          name: main
        - containerPort: 9090
          protocol: TCP
          name: liveness-port
        args:
          - --enable-insecure-login #--auto-generate-certificates
          # Uncomment the following line to manually specify Kubernetes API server Host
          # If not specified, Dashboard will attempt to auto discover the API server and connect
          # to it. Uncomment only if the default does not work.
          # - --apiserver-host=http://my-address:port
          - --namespace=<SERVICE_NAMESPACE>
        volumeMounts:
        - name: kubernetes-dashboard-certs
          mountPath: /certs
          # Create on-disk volume to store exec logs
        - mountPath: /tmp
          name: tmp-volume
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: liveness-port
          initialDelaySeconds: 30
          timeoutSeconds: 30
      volumes:
      - name: kubernetes-dashboard-certs
        secret:
          secretName: kubernetes-dashboard-certs
      - name: tmp-volume
        emptyDir: {}
      serviceAccountName: kubernetes-dashboard
      # Comment the following tolerations if Dashboard must not be deployed on master
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule

---
# ------------------- Dashboard Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    app: kubernetes-dashboard
    lab.namespace: <SERVICE_NAMESPACE>
  name: <SERVICE_NAMESPACE>-service-admin #kubernetes-dashboard
  namespace: <SERVICE_NAMESPACE>
spec:
  ports:
    - port: 9000
      targetPort: 9090
  selector:
    app: <SERVICE_NAMESPACE>-service-admin

---
